Related: tdf#146836 daisy chain together some more event handlers

so old ones are not clobbered but are called from the new ones

Change-Id: I4cdd25fc1f3b13b10711d5c2f30c46645ae6c968
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129503
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>